try fixing swipe gallery on mobile

--- a/src/components/sections/app-portfolio/gallery/gallery.scss
+++ b/src/components/sections/app-portfolio/gallery/gallery.scss
@@ -8,7 +8,11 @@
   grid-template-columns: 0%;
   grid-auto-flow: column;
   grid-auto-columns: calc(66%);
-  overflow-x: hidden;
+  overflow-x: auto;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 
   @media only screen and (min-width: $small-bp) {
     grid-template-columns: 3%;
@@ -30,8 +34,16 @@
 :host::after {
   content: "";
   display: block;
-  width: 0.1px;
+  width: 0.5vw;
   height: 1px;
+
+  @media only screen and (min-width: $small-bp) {
+    width: 3.5vw;
+  }
+
+  @media only screen and (min-width: $medium-bp) {
+    width: 9vw;
+  }
 }
 
 :host::before {
